--- a/src/posts/ios-programming/swift/iosworkshop-03.mdx
+++ b/src/posts/ios-programming/swift/iosworkshop-03.mdx
@@ -30,10 +30,10 @@ graph TD;
 
 #### as로 upcasting
 
-<div className="mermaid">
-    graph BT
-        A[자식] --> |upcasting| B[부모]
-</div> 
+```mermaid
+graph BT
+    A[자식] --> |upcasting| B[부모]
+```
 
 `자식인스턴스 as 부모클래스`를 이용해 자식 인스턴스를 부모 클래스의 객체로 변환한다.
 
@@ -55,10 +55,10 @@ let myControl = myButton as UIControl
 
 #### as! as?로 downcasting
 
-<div className="mermaid">
-    graph TD;
-        A[부모] --> |downcasting| B[자식]
-</div>
+```mermaid
+graph TD;
+    A[부모] --> |downcasting| B[자식]
+```
 
 `부모인스턴스 as! 자식클래스`나 `부모인스턴스 as? 자식클래스`를 이용해 부모 인스턴스를 자식 클래스로 변환한다.
 
