:memo: Docs: 인용 블록 개행 추가 #5

--- a/src/posts/android/programmers/solve-178870.mdx
+++ b/src/posts/android/programmers/solve-178870.mdx
@@ -86,14 +86,16 @@ class Solution {
 나는 그냥 큐를 이용해 풀었는데, 투 포인터와 이분 탐색으로 푸는 방법도 있다고 한다.
 
 > **⭐ 투 포인터 알고리즘, Two Pointers**
-리스트에 순차적으로 접근해야 할 때 두 개의 점의 위치를 기록하면서 처리하는 알고리즘
-`시간복잡도`  $O(N)$
+>
+> 리스트에 순차적으로 접근해야 할 때 두 개의 점의 위치를 기록하면서 처리하는 알고리즘
+> `시간복잡도`  $O(N)$
 
 > **⭐ 이분 탐색(이진 탐색) 알고리즘, Binary Search**
-정렬된 배열에서 특정 값을 찾을 때 정중앙에 위치한 값을 활용해 탐색하는 알고리즘
-`원리`  "중앙값 < 탐색값"이면 탐색값 보다 작은 부분(중앙값의 왼쪽)은 고려할 필요가 없다.
-`시간 복잡도`  $O(\log{N})$
-![](/posts/android/programmers/178870.gif)
+>
+> 정렬된 배열에서 특정 값을 찾을 때 정중앙에 위치한 값을 활용해 탐색하는 알고리즘
+> `원리`  "중앙값 < 탐색값"이면 탐색값 보다 작은 부분(중앙값의 왼쪽)은 고려할 필요가 없다.
+> `시간 복잡도`  $O(\log{N})$
+> ![](/posts/android/programmers/178870.gif)
 
 
 #### 투 포인터
